Switching to JWT strategy, adding id to the session, creating a room when submiting a form

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL="postgresql://postgres:39553560*Kiet@localhost:5432/mydb?schema=dev_finder_db"
+DATABASE_URL="postgresql://postgres:39553560*Kiet@localhost:5432/postgres?schema=dev_finder_db"
 
 GOOGLE_CLIENT_ID="114605016130-fu07q5qtoncqk4srkgplj0nonma7edop.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+
+NEXTAUTH_SECRET="my_super_secure_next_auth_secret"
