--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,6 +23,7 @@
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
